<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <!-- Option brightness-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/option_item_background">
            <com.phamhungan.ballimpact.util.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/brightness"
                android:textColor="@color/yellow_text"
                android:shadowRadius="2"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:id="@+id/seekBrightness"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/seek_bar"
                    android:secondaryProgress="0" />
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:id="@+id/txtBriPercent"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:textColor="@color/yellow_text"
                    android:text="100%"
                    android:textSize="18sp"
                    android:gravity="center_vertical|left"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Option Player 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/option_item_background"
            android:layout_marginTop="10dp">
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/player1"
                    android:textColor="@color/yellow_text"
                    android:layout_marginBottom="5dp"
                    android:shadowRadius="2"
                    android:shadowDy="2"
                    android:shadowDx="2"
                    android:shadowColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <com.phamhungan.ballimpact.util.custom.CustomTextView
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="match_parent"
                        android:textSize="24sp"
                        android:text="@string/ball"
                        android:textColor="@color/yellow_text"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical|left"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/p1BallList"
                            android:layout_width="0dp"
                            android:layout_weight="0.8"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|left"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:text="@string/name"
                    android:textColor="@color/yellow_text"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|left"/>
                <EditText
                    android:id="@+id/txtP1Name"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|left"
                    android:background="@drawable/edittext_background"/>
            </LinearLayout>
        </LinearLayout>

        <!--Option Player 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/option_item_background"
            android:layout_marginTop="10dp">
            <com.phamhungan.ballimpact.util.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/player2"
                android:textColor="@color/yellow_text"
                android:layout_marginBottom="5dp"
                android:shadowRadius="2"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:text="@string/ball"
                    android:textColor="@color/yellow_text"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|left"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/p2BallList"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:text="@string/name"
                    android:textColor="@color/yellow_text"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|left"/>
                <EditText
                    android:id="@+id/txtP2Name"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|left"
                    android:background="@drawable/edittext_background"/>
            </LinearLayout>
        </LinearLayout>

        <!--Option Tables -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/option_item_background"
            android:layout_marginTop="10dp">
            <com.phamhungan.ballimpact.util.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/table"
                android:textColor="@color/yellow_text"
                android:layout_marginBottom="5dp"
                android:shadowRadius="2"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:text="@string/color"
                    android:textColor="@color/yellow_text"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|left"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/tableList"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|left"/>
            </LinearLayout>
        </LinearLayout>

        <!--Option Line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/option_item_background"
            android:layout_marginTop="10dp">
            <com.phamhungan.ballimpact.util.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/line"
                android:textColor="@color/yellow_text"
                android:layout_marginBottom="5dp"
                android:shadowRadius="2"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:text="@string/color"
                    android:textColor="@color/yellow_text"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|left"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lineList"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|left"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp">
                <ImageView
                    android:id="@+id/imgSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="28sp"
                    android:shadowColor="@color/black"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="3"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="center"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp">
                <ImageView
                    android:id="@+id/imgDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <com.phamhungan.ballimpact.util.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaults"
                    android:textSize="28sp"
                    android:shadowColor="@color/black"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="3"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="center"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>