<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phamhungan.ballimpact.Main"
    android:orientation="vertical"
    android:background="@drawable/backgorund"
    android:id="@+id/lnMain"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/lnImgSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lnChoose"
        android:orientation="vertical"
        android:gravity="center">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/imgPlay"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
            <com.phamhungan.ballimpact.util.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:textSize="60sp"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:textColor="@color/yellow_text"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:focusable="false"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/imgOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <com.phamhungan.ballimpact.util.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:textSize="40sp"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:textColor="@color/yellow_text"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:focusable="false"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/imgExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <com.phamhungan.ballimpact.util.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="30sp"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:textColor="@color/yellow_text"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:focusable="false"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
